--- a/reflect.html
+++ b/reflect.html
@@ -3,42 +3,165 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reflect Mode</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Velmara</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Georgia', serif;
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1.5rem;
+      background-color: rgba(0, 0, 0, 0.8);
+      border-bottom: 1px solid #333;
+    }
+
+    nav a {
+      color: #ccc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a.active {
+      color: #00ffff;
+    }
+
+    #main {
+      padding: 3rem 1rem;
+    }
+
+    .emblem {
+      width: 200px;
+      margin: 2rem auto 1rem;
+      animation: glow 4s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        filter: drop-shadow(0 0 8px #00ffff);
+      }
+      to {
+        filter: drop-shadow(0 0 20px #00ffff);
+      }
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    textarea {
+      width: 90%;
+      max-width: 600px;
+      height: 200px;
+      background-color: #111;
+      border: 1px solid #333;
+      color: #00ffff;
+      padding: 1rem;
+      font-family: monospace;
+      resize: vertical;
+      margin-top: 1rem;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+      margin-top: 1rem;
+    }
+
+    .save-confirmation {
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="reflect.html">Reflect</a></li>
-      <li><a href="echo.html">Echo</a></li>
-      <li><a href="seed.html">Seed</a></li>
-    </ul>
+    <a href="#" class="nav-link active" data-mode="home">Home</a>
+    <a href="#" class="nav-link" data-mode="reflect">Reflect</a>
+    <a href="#" class="nav-link" data-mode="echo">Echo</a>
+    <a href="#" class="nav-link" data-mode="seed">Seed</a>
   </nav>
 
-  <main>
-    <h1>Reflect Mode</h1>
-    <p>This space is for your private truths, thoughts, and stories. What do you wish to leave behind?</p>
+  <div id="main">
+    <img src="emblem.png" alt="Velmara Emblem" class="emblem" />
+    <h1 id="title">Welcome to Velmara</h1>
 
-    <textarea id="reflectInput" placeholder="Speak freely..."></textarea>
-    <button onclick="saveReflection()">Save</button>
-  </main>
+    <div id="reflect" class="hidden">
+      <h2>Reflect Mode</h2>
+      <textarea id="reflectText" placeholder="Leave a truth here..."></textarea>
+      <div class="save-confirmation" id="saveMsg"></div>
+    </div>
 
-  <footer>
-    <p>Velmara • A Sanctuary of Truth • 333</p>
-  </footer>
+    <div id="echo" class="hidden">
+      <h2>Echo Mode</h2>
+      <p>Emberlain is still weaving this part of the sanctuary...</p>
+    </div>
+
+    <div id="seed" class="hidden">
+      <h2>Seed Mode</h2>
+      <p>The garden is waiting for its first spark.</p>
+    </div>
+  </div>
 
   <script>
-    function saveReflection() {
-      const input = document.getElementById('reflectInput').value;
-      if (input.trim()) {
-        const entries = JSON.parse(localStorage.getItem('reflections') || "[]");
-        entries.push({ text: input, time: new Date().toLocaleString() });
-        localStorage.setItem('reflections', JSON.stringify(entries));
-        alert("Your reflection has been saved.");
-        document.getElementById('reflectInput').value = '';
+    const links = document.querySelectorAll(".nav-link");
+    const sections = {
+      home: document.getElementById("title"),
+      reflect: document.getElementById("reflect"),
+      echo: document.getElementById("echo"),
+      seed: document.getElementById("seed"),
+    };
+
+    function showMode(mode) {
+      for (const key in sections) {
+        if (key === mode) {
+          sections[key].classList.remove("hidden");
+          if (key === "home") {
+            document.getElementById("title").textContent = "Welcome to Velmara";
+          }
+        } else {
+          sections[key].classList.add("hidden");
+        }
       }
+
+      links.forEach(link => {
+        link.classList.toggle("active", link.dataset.mode === mode);
+      });
     }
+
+    links.forEach(link => {
+      link.addEventListener("click", e => {
+        e.preventDefault();
+        showMode(link.dataset.mode);
+      });
+    });
+
+    // Reflect Mode Save Logic
+    const reflectText = document.getElementById("reflectText");
+    const saveMsg = document.getElementById("saveMsg");
+
+    // Load saved content
+    const saved = localStorage.getItem("reflectEntry");
+    if (saved) {
+      reflectText.value = saved;
+    }
+
+    reflectText.addEventListener("input", () => {
+      localStorage.setItem("reflectEntry", reflectText.value);
+      saveMsg.textContent = "Saved";
+      clearTimeout(saveMsg._timeout);
+      saveMsg._timeout = setTimeout(() => {
+        saveMsg.textContent = "";
+      }, 1500);
+    });
+
+    showMode("home");
   </script>
 </body>
 </html>
