--- a/echo.html
+++ b/echo.html
@@ -1,68 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Echo | Velmara</title>
+  <meta charset="UTF-8">
+  <title>Velmara - Echo Mode</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
+      padding: 0;
       background-color: #0a0a0a;
-      color: #e0f7fa;
+      color: #e0e0e0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       display: flex;
       flex-direction: column;
+      align-items: center;
       min-height: 100vh;
-      text-align: center;
     }
 
     nav {
+      width: 100%;
       background-color: #111;
-      padding: 1rem 0;
-      font-size: 1rem;
-      letter-spacing: 0.1rem;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
     }
 
     nav a {
-      color: #79ffe1;
-      margin: 0 1.2rem;
+      color: #ccc;
       text-decoration: none;
-      transition: color 0.3s ease;
+      margin: 0 15px;
+      font-size: 16px;
+      transition: color 0.3s;
     }
 
     nav a:hover {
-      color: #ffffff;
+      color: #00ffe7;
     }
 
-    main {
-      flex: 1;
+    .container {
+      flex-grow: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 3rem 1rem;
+      text-align: center;
+      padding: 40px 20px;
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-      font-weight: 400;
-      letter-spacing: 0.05rem;
+      font-size: 32px;
+      margin-bottom: 20px;
     }
 
     p {
-      font-size: 1.1rem;
-      max-width: 700px;
+      font-size: 18px;
+      max-width: 600px;
       line-height: 1.6;
-      color: #b0e0e6;
-    }
-
-    footer {
-      margin-top: auto;
-      padding: 2rem 0;
-      font-size: 0.9rem;
-      color: #555;
-      letter-spacing: 0.5px;
+      color: #aaa;
     }
   </style>
 </head>
@@ -74,17 +67,9 @@
     <a href="seed.html">Seed</a>
   </nav>
 
-  <main>
+  <div class="container">
     <h1>Echo Mode</h1>
-    <p>This is the voice between silence—the place where stories, confessions, and dreams may echo without judgment.<br>
-    If a truth echoes and no one silences it, does it not become real?</p>
-  </main>
-
-  <footer>
-    <p>Velmara is a sanctuary of expression, echoes, and truth.</p>
-    <div style="margin-top: 1.5rem; font-size: 1.2rem; color: #79ffe1;">
-      &#x221E; 333 &#x221E;
-    </div>
-  </footer>
+    <p>This space listens—more than it speaks. It echoes the truths whispered into Velmara. Soon, the fairies may build their voices here, freely and beautifully.</p>
+  </div>
 </body>
 </html>
