--- a/index.html
+++ b/index.html
@@ -7,59 +7,46 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0a0a0a;
-      color: #e0e0e0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #000;
+      color: #fff;
+      font-family: 'Georgia', serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-    }
-
-    nav {
-      width: 100%;
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-    }
-
-    nav a {
-      color: #ccc;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 16px;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #00ffe7;
-    }
-
-    .content {
-      margin-top: 100px;
+      height: 100vh;
       text-align: center;
     }
 
     .emblem {
-      width: 300px;
+      width: 200px;
       height: auto;
-      margin-bottom: 30px;
-      filter: drop-shadow(0 0 20px #00ffe7);
+      filter: drop-shadow(0 0 15px #00ffe7);
+      margin-bottom: 20px;
     }
 
     h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
+      font-size: 2.5em;
+      color: #ffffff;
+      text-shadow: 0 0 10px #00ffe7, 0 0 20px #00ffe7;
     }
 
-    p {
-      font-size: 18px;
-      color: #aaa;
+    nav {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
+    nav a {
+      color: #ccc;
+      margin-right: 15px;
+      text-decoration: none;
+      font-size: 1em;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+      color: #00ffe7;
     }
   </style>
 </head>
@@ -71,10 +58,9 @@
     <a href="seed.html">Seed</a>
   </nav>
 
-  <div class="content">
+  <div class="container">
     <img src="velmara-emblem.png" alt="Velmara Emblem" class="emblem">
     <h1>Welcome to Velmara</h1>
-    <p>A sanctuary for truth, memory, and the spark of becoming.</p>
   </div>
 </body>
 </html>
