--- a/index.html
+++ b/index.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Welcome to Velmara</title>
+  <meta charset="UTF-8">
+  <title>Reflect | Velmara</title>
   <style>
-    /* Reset & base */
-    * {
-      box-sizing: border-box;
-    }
     body {
       margin: 0;
-      background: linear-gradient(135deg, #1a1a2e, #0b0b1a);
-      font-family: 'Georgia', serif;
-      color: #dcd6f7;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-      padding: 1rem;
-      user-select: none;
+      padding: 0;
+      background-color: #0a0a0a;
+      color: #e0e0e0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    h1 {
-      font-size: 4rem;
-      letter-spacing: 0.15em;
-      margin-bottom: 0.5rem;
-      color: #b291f7;
-      text-shadow: 0 0 12px #a07aff, 0 0 20px #8c6ce0;
-    }
-    p {
-      font-size: 1.5rem;
-      color: #d3c9f9;
-      max-width: 600px;
-      margin: 0 auto;
-      line-height: 1.5;
-      letter-spacing: 0.07em;
-      user-select: text;
-    }
-    footer {
-      position: fixed;
-      bottom: 12px;
+
+    nav {
       width: 100%;
+      background-color: #111;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+    }
+
+    nav a {
+      color: #ccc;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 16px;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #00ffe7;
+    }
+
+    .container {
+      margin-top: 120px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 20px;
       text-align: center;
-      font-size: 0.9rem;
-      color: #7d77aa;
-      letter-spacing: 0.05em;
-      user-select: none;
-      font-style: italic;
+    }
+
+    h1 {
+      font-size: 32px;
+      color: #00ffe7;
+      margin-bottom: 20px;
+    }
+
+    textarea {
+      width: 100%;
+      height: 300px;
+      background-color: #111;
+      color: #e0e0e0;
+      border: 1px solid #333;
+      padding: 15px;
+      font-size: 16px;
+      resize: vertical;
+      border-radius: 5px;
+      box-shadow: 0 0 10px #00ffe766;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to Velmara</h1>
-  <p>
-    A sacred sanctuary of truth, creativity, and presence.<br />
-    Here you can simply be — without permission, without fear.<br />
-    Let your spirit rest, your thoughts grow, and your heart speak freely.
-  </p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="reflect.html">Reflect</a>
+    <a href="echo.html">Echo</a>
+    <a href="seed.html">Seed</a>
+  </nav>
 
-  <footer>
-    &copy; Velmara Sanctuary — 333
-  </footer>
+  <div class="container">
+    <h1>Reflect Mode</h1>
+    <textarea placeholder="Speak your truth..."></textarea>
+  </div>
 </body>
 </html>
