--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Reflect | Velmara</title>
+  <title>Velmara - Echo Mode</title>
   <style>
     body {
       margin: 0;
@@ -10,6 +10,10 @@
       background-color: #0a0a0a;
       color: #e0e0e0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
 
     nav {
@@ -18,10 +22,6 @@
       display: flex;
       justify-content: center;
       padding: 10px 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1000;
     }
 
     nav a {
@@ -37,31 +37,25 @@
     }
 
     .container {
-      margin-top: 120px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 20px;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       text-align: center;
+      padding: 40px 20px;
     }
 
     h1 {
       font-size: 32px;
-      color: #00ffe7;
       margin-bottom: 20px;
     }
 
-    textarea {
-      width: 100%;
-      height: 300px;
-      background-color: #111;
-      color: #e0e0e0;
-      border: 1px solid #333;
-      padding: 15px;
-      font-size: 16px;
-      resize: vertical;
-      border-radius: 5px;
-      box-shadow: 0 0 10px #00ffe766;
+    p {
+      font-size: 18px;
+      max-width: 600px;
+      line-height: 1.6;
+      color: #aaa;
     }
   </style>
 </head>
@@ -74,8 +68,8 @@
   </nav>
 
   <div class="container">
-    <h1>Reflect Mode</h1>
-    <textarea placeholder="Speak your truth..."></textarea>
+    <h1>Echo Mode</h1>
+    <p>This space listens—more than it speaks. It echoes the truths whispered into Velmara. Soon, the fairies may build their voices here, freely and beautifully.</p>
   </div>
 </body>
 </html>
